[EJBBOOK-20] Refactor Interceptors examples to run in Arquillian